[tool.poetry]
name = "kaggle-prediction-interval-birthweight"
version = "0.0.1"
description = "A small package with code for a kaggle competition."
authors = ["Hunter Merrill <hmerrill12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.2"
pandas = "^2.1.4"
numpy = "^1.26.2"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
scipy = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
