[tool.poetry]
name = "kaggle-prediction-interval-birthweight"
version = "0.0.1"
description = "A small package with code for a kaggle competition."
authors = ["Hunter Merrill <hmerrill12@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
kaggle-prediction-interval-birthweight = "kaggle_prediction_interval_birthweight.main:app"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
matplotlib = "^3.8.2"
pandas = "^2.1.4"
numpy = "^1.26.2"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
scipy = "^1.11.4"
tqdm = "^4.66.1"
typer = {extras = ["all"], version = "^0.9.0"}
mapie = "^0.7.0"
scikit-optimize = "^0.9.0"
wildwood = "^0.3"
tensorflow-io-gcs-filesystem = "0.34.0" # a transitory bug, I hope
tensorflow = "^2.14.0"
decorator = "^5.1.1"
pyarrow = "^15.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
